--- a/client/style/main.css
+++ b/client/style/main.css
@@ -157,3 +157,117 @@
         height: 450px !important; 
       }
 }
+
+/*********Loader*******************/
+#loader-wrapper {
+          position: fixed;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          z-index: 1000;
+          background: white;
+      }
+      #loader {
+          display: block;
+          position: relative;
+          left: 48%;
+          top: 45%;
+          font-size: 500%;
+          color:#22262e;
+          width: 150px;
+          height: 150px;
+          z-index: 1001;
+      }
+
+      .loaded #loader-wrapper {
+          visibility: hidden;
+      }
+
+      .loaded #loader {
+          opacity: 0;
+      }
+
+
+/*********END Loader*******************/
+
+/*********Animation****************/
+
+
+.animate.ng-enter { 
+    -webkit-animation: enter 600ms cubic-bezier(0.445, 0.050, 0.550, 0.950);
+    animation: enter 600ms cubic-bezier(0.445, 0.050, 0.550, 0.950);
+  display: block;
+    position: relative;
+} 
+@-webkit-keyframes enter {
+  from {
+      opacity: 0;
+      height: 0px;
+      left: -70px;
+    }
+    75% {
+      left: 15px;
+    }
+    to {
+        opacity: 1;
+      height: 30px;
+      left: 0px;
+    }
+}
+@keyframes enter {
+  from {
+      opacity: 0;
+      height: 0px;
+      left: -70px;
+    }
+    75% {
+      left: 15px;
+    }
+    to {
+        opacity: 1;
+      height: 30px;
+      left: 0px;
+    }
+}
+
+.animate.ng-leave { 
+    -webkit-animation: leave 600ms cubic-bezier(0.445, 0.050, 0.550, 0.950);
+    animation: leave 600ms cubic-bezier(0.445, 0.050, 0.550, 0.950);
+  display: block;
+    position: relative;
+} 
+@-webkit-keyframes leave {
+  to {
+      opacity: 0;
+      height: 0px;
+      left: -70px;
+    }
+    25% {
+      left: 15px;
+    }
+    from {
+        opacity: 1;
+      height: 30px;
+      left: 0px;
+    }
+}
+@keyframes leave {
+  to {
+      opacity: 0;
+      height: 0px;
+      left: -70px;
+    }
+    25% {
+      left: 15px;
+    }
+    from {
+        opacity: 1;
+      height: 30px;
+      left: 0px;
+    }
+}
+
+
+
+/*********END Animation****************/
